--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,5 @@ main: me.kmaxi.parkourtimer.ParkourTimerMain
 version: 1.0
 commands:
   parkour:
+api-version: 1.16
+softdepend: [HolographicDisplays]
